--- a/style.css
+++ b/style.css
@@ -96,3 +96,73 @@
     margin-top: 20px;
 
 }
+
+.main-1-div-bg{
+    width: 980px;
+    height: 1150px;
+    border-radius: 16px;
+    background: rgba(13, 19, 33, 0.02);
+    padding: 67px 82px;
+    margin: 90px auto; 
+     box-sizing: border-box;
+}
+
+.main-1-div{
+    width: 813px;
+    height: 1060px;
+    padding: 0px 9px;    
+}
+.main-1-div-h1{
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 26px;
+    font-weight: 800;
+    line-height: 30px;
+    letter-spacing: 0%;
+    text-align: center;
+}
+.main-1-div-card1-bg{
+    width: 813px;
+    height: 200px;
+    border-radius: 16px;
+    background: linear-gradient(90.00deg, rgb(255, 255, 255),rgba(255, 255, 255, 0) 100%);
+    padding: 35px;
+    margin: 30px 0px;
+}
+.main-1-div-card1{
+    display: flex; 
+}
+.main-1-div-card1-left{
+    width: 409px;
+    height: 187px;
+    
+}
+.main-1-div-card1-left-h1{
+    color: rgba(13, 19, 33, 0.7);
+    font-family: Azeret Mono;
+    font-size: 19px;
+    font-weight: 700;
+    line-height: 29px;
+    letter-spacing: 0%;
+    text-align: left;
+    margin: 12px 0px;
+}
+.main-1-div-card1-left-subtitle{
+    opacity: 0.7;
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 19px;
+    letter-spacing: 0%;
+    text-align: left;
+    margin: 12px 0px;
+}
+.main-1-div-card1-right{
+    max-width: 234px;
+    max-height: 187px;
+}
+.main-1-div-card1-right-img > img{
+    width: 99%;
+    height: 0%;
+}
