--- a/style.css
+++ b/style.css
@@ -166,3 +166,33 @@
     width: 99%;
     height: 0%;
 }
+
+.main-2-div{
+    width: 980px;
+    height: 667px;
+    margin-bottom: 60px;
+    
+}
+.main-2-div1{
+    max-width: 732px;
+    max-height: 96px;
+}
+.main-2-div2{
+    width: 980px;
+    height: 527px;
+    box-sizing: border-box;
+    border: 1px solid rgba(13, 19, 33, 0.2);
+    border-radius: 12px;    
+}
+.main-2-div2-vdo{
+    margin: 28px auto 0px auto;
+    
+    width: 925px;
+    height: 472px;
+    
+}
+.main-2-div2-vdo > iframe{
+    border-radius: 16px;
+     width: 100%;
+     height: 100%;
+}
