I Need Support  main-5-div added

--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@
     
 }
 
+
 #navbar{
      display: flex;
      padding: 40px 0px;
@@ -294,11 +295,50 @@
     /* padding-right: 15px; */
 }
 .main-4-div-card-img > img {
-     width: 100%;
-     height: 100%;
+    width: 100%;
+    height: 100%;
 }
 .main-4-div-card-txt{
     width: 809px;
     height: 118px;
     /* margin: 12px 0px; */
 }
+.main-5-div-bg{
+    width: 980px;
+    height: 268px;
+    margin-top: 30px;
+    padding: 20px 0px;
+    margin-bottom: 70px;
+    border-radius: 16px;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.2)), url("assets/handshake.jpg");
+    background-size: cover;
+    background-position: center;
+}
+.main-5-div-inner{
+    width: 898px;
+    height: 158px;
+    margin: 50px 10px;
+    text-align: center; 
+}
+
+.main-5-div-inner > form {
+    margin: 10px 12px;
+    padding: 15px 16px; 
+}
+.main-5-div-inner > form > input{
+    border: 1px solid rgba(13, 19, 33, 0.15);
+    border-radius: 6px;   
+    width: 470px;
+    height: 48px;  
+    border: none;
+}
+.btn-3{
+    width: 102px;
+    height: 48px;
+    padding: 13px 16px;
+    margin: 0px 12px;
+    border-radius: 6px;
+    background: rgb(255, 255, 255);
+    border: none;
+}
+
